--- a/nsf-demo-stock-provider/nsf.yml
+++ b/nsf-demo-stock-provider/nsf.yml
@@ -1,7 +1,7 @@
 nsf:
   type: http
   version: '2.0'
-  nsfServer: 'http://nsf-server-cust56.netease.com'
+  nsfServer: 'http://nsf-server-poc31.netease.com'
   application:
     name: stock-provider
     version: 0.0.1
@@ -12,5 +12,5 @@ nsf:
     tags: []
 
   authority:
-    accessKey: ab681795638e4bb89c61119b649bf76e
-    secretKey: 22d111c19b5d4375846e7d66778a4a84
+    accessKey: df3c701d6fa446378f83846c5aae1d41
+    secretKey: eacd46c06d6f4b89bc16523b51833929
