--- a/nsf-demo-stock-advisor/Dockerfile
+++ b/nsf-demo-stock-advisor/Dockerfile
@@ -5,16 +5,16 @@ ADD ./nsf-demo-stock-advisor/target/*.jar /opt/nsf/
 
 #add nsf agent jar and config file
 RUN mkdir -p /opt/nsf && cd /opt/nsf && \
-    wget "http://console-cust56.netease.com/download/nsf-agent-v2.6.6-ae06cc43-20200417-150504.jar" -O nsf-agent.jar
+    wget "http://console-poc31.netease.com/download/nsf/nsf-agent-v2.6.8-c2a5e1f9-20201203-141827.jar" -O nsf-agent.jar
 ADD ./nsf-demo-stock-advisor/nsf.yml /opt/nsf/nsf.yml
 
 #add apm agent jar and config file
 RUN mkdir -p /opt/apm && cd /opt/apm && \
-    wget "http://console-cust56.netease.com/download/napm-java-agent-v5.3.3-190825-36860798.tar.gz" -O napm-java-agent.tar.gz && \
+    wget "http://console-poc31.netease.com/download/napm/napm-java-agent-v5.4.9-201112-26f1516.tar.gz" -O napm-java-agent.tar.gz && \
     tar zxvf napm-java-agent.tar.gz && \
     cd ./napm-java-agent/conf && \
-    echo "endpoint=http://apm-collector-cust56.netease.com" >> napm-agent.properties && \
-    echo "productId=57-stock" >> napm-agent.properties && \
+    echo "endpoint=http://apm-collector-poc31.netease.com" >> napm-agent.properties && \
+    echo "productId=25-stock" >> napm-agent.properties && \
     echo "service=stock-advisor" >> napm-agent.properties
 
 #add run command
