--- a/nsf-demo-stock-viewer/nsf.yml
+++ b/nsf-demo-stock-viewer/nsf.yml
@@ -1,11 +1,15 @@
 nsf:
-  type: springboot2.1
+  type: http
   version: '2.0'
   nsfServer: 'http://nsf-server-poc31.netease.com'
   application:
     name: stock-viewer
     version: 0.0.1
     projectCode: wangbicheng
+    envCode: prod
+    zone: default
+    group: default
+    tags: []
 
   # 方法配置
   manager:
@@ -24,6 +28,3 @@ nsf:
   authority:
     accessKey: df3c701d6fa446378f83846c5aae1d41
     secretKey: eacd46c06d6f4b89bc16523b51833929
-  relations:
-    services: []
-    versions: []
