--- a/nsf-demo-stock-viewer/src/main/resources/application.properties
+++ b/nsf-demo-stock-viewer/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=stock-viewer
 server.port=8080
 
 stock_provider_url=http://stock-provider
-stock_advisor_url=http://stock-advisor
+stock_advisor_url=http://stock-advisor.solution-agent
 stock_predictor_url=http://stock-predictor
 
 management.endpoints.web.exposure.include=*
