change zone to chongqing

--- a/nsf-demo-stock-provider/nsf.yml
+++ b/nsf-demo-stock-provider/nsf.yml
@@ -7,7 +7,7 @@ nsf:
     version: 0.0.2
     projectCode: wangbicheng
     envCode: prod
-    zone: default
+    zone: chongqing
     group: default
     tags: []
 
