--- a/nsf-demo-stock-viewer/Dockerfile
+++ b/nsf-demo-stock-viewer/Dockerfile
@@ -11,9 +11,9 @@ ADD nsf-demo-stock-viewer/nsf.yml /opt/nsf/nsf.yml
 
 #add apm agent jar and config file
 RUN mkdir -p /opt/apm && \
-    wget -q "http://console-cust92.netease.com/download/napm/skywalking-napm-bin-8.0.0-latest.tar.gz" -O /opt/apm/napm-java-agent.tar.gz && \
-    tar zxvf napm-java-agent.tar.gz && \
-    cd ./napm-java-agent/agent/config && \
+    wget -q "http://console-cust92.netease.com/download/napm/skywalking-napm-bin-8.0.0-latest.tar.gz" -O /opt/apm/skywalking-napm-bin-8.0.0-latest.tar.gz && \
+    tar zxvf skywalking-napm-bin-8.0.0-latest.tar.gz && \
+    cd ./skywalking-napm-bin-8.0.0-latest/agent/config && \
         # productId用于表示APM中唯一的应用，名称不可修改
 	echo 'agent.authentication=51-nsf-stock-viewer' >> agent.config && \
 	# service 为APM中监控服务的名称（进程功能，如管理服务器）
