--- a/nsf-demo-stock-viewer/Dockerfile
+++ b/nsf-demo-stock-viewer/Dockerfile
@@ -5,22 +5,23 @@ ADD nsf-demo-stock-viewer/target/*.jar /opt/nsf/
 
 #add nsf agent jar and config file
 RUN mkdir -p /opt/nsf && \
-    wget -q "http://console-cust92.netease.com/download/nsf/nsf-agent-v2.6.8-c2a5e1f9-20201203-141827.jar" -O /opt/nsf/nsf-agent.jar
+    wget -q "http://console-cust145.qingzhou.netease.com/download/nsf/nsf-boot.jar" -O /opt/nsf/nsf-agent.jar
 	
 ADD nsf-demo-stock-viewer/nsf.yml /opt/nsf/nsf.yml
 
 #add apm agent jar and config file
 RUN mkdir -p /opt/apm && \
     cd /opt/apm/ && \
-    wget -q "http://console-cust92.netease.com/download/napm/skywalking-napm-bin-8.0.0-latest.tar.gz" -O skywalking-napm-bin-8.0.0-latest.tar.gz && \
-    tar zxvf skywalking-napm-bin-8.0.0-latest.tar.gz && \
-    cd ./skywalking-napm-bin-8.0.0-latest/agent/config && \
-        # productId用于表示APM中唯一的应用，名称不可修改
-	echo 'agent.authentication=51-nsf-stock-viewer' >> agent.config && \
-	# service 为APM中监控服务的名称（进程功能，如管理服务器）
-	echo 'agent.service_name=nsf-stock-viewer' >> agent.config && \
+    wget -q ”http://console-cust145.qingzhou.netease.com/download/napm/skywalking-napm-bin-8.5.0-latest.tar.gz“ -O skywalking-napm-bin-8.5.0-latest.tar.gz && \
+    tar zxvf skywalking-napm-bin-8.5.0-latest.tar.gz && \
+    cd ./skywalking-napm-bin-8.5.0-latest/agent/config && \
+    # productId用于表示APM中唯一的应用，名称不可修改
+	echo 'agent.authentication=NTczLXd5ZGVtbw==dw-nsf-http-stock-viewer' >> agent.config && \
+	# service 为APM中监控服务的名称（进程功能，如管理服务器），小写字母、数字、英文句号或中划线组成，以字母开头，字母或数字结尾
+    # 建议和监控的服务进程名相同，如 webServer、alertServer
+	echo 'agent.service_name=dw-nsf-http-stock-viewer' >> agent.config && \
 	# 注册服务和数据上传地址
-	echo 'collector.backend_service=apm-otel-collector-cust92.netease.com:11800' >> agent.config && \
+	echo 'collector.backend_service=apm-otel-collector.service.163.org:11800' >> agent.config && \
 	# 3秒内采集trace上限，默认10000条 （-1代表全部采集）
 	echo 'agent.sample_n_per_3_secs=10000' >> agent.config
 
