--- a/nsf-demo-stock-viewer/Dockerfile
+++ b/nsf-demo-stock-viewer/Dockerfile
@@ -5,14 +5,14 @@ ADD nsf-demo-stock-viewer/target/*.jar /opt/nsf/
 
 #add nsf agent jar and config file
 RUN mkdir -p /opt/nsf && \
-    wget -q "http://console-cust145.qingzhou.netease.com/download/nsf/nsf-boot.jar" -O /opt/nsf/nsf-agent.jar
+    wget -q http://console-cust145.qingzhou.netease.com/download/nsf/nsf-boot.jar -O /opt/nsf/nsf-agent.jar
 	
 ADD nsf-demo-stock-viewer/nsf.yml /opt/nsf/nsf.yml
 
 #add apm agent jar and config file
 RUN mkdir -p /opt/apm && \
     cd /opt/apm/ && \
-    wget -q ”http://console-cust145.qingzhou.netease.com/download/napm/skywalking-napm-bin-8.5.0-latest.tar.gz“ -O skywalking-napm-bin-8.5.0-latest.tar.gz && \
+    wget -q http://console-cust145.qingzhou.netease.com/download/napm/skywalking-napm-bin-8.5.0-latest.tar.gz -O skywalking-napm-bin-8.5.0-latest.tar.gz && \
     tar zxvf skywalking-napm-bin-8.5.0-latest.tar.gz && \
     cd ./skywalking-napm-bin-8.5.0-latest/agent/config && \
     # productId用于表示APM中唯一的应用，名称不可修改
