--- a/nsf-demo-stock-provider/Dockerfile
+++ b/nsf-demo-stock-provider/Dockerfile
@@ -1,24 +1,31 @@
 FROM tomcat:7.0.77-jre8
 
 #add application jar
-ADD target/*.jar /opt/nsf/
+ADD nsf-demo-stock-provider/target/*.jar /opt/nsf/
 
 #add nsf agent jar and config file
-RUN mkdir -p /opt/nsf && cd /opt/nsf && \
-    wget "http://console.v190808.163skiff.com/download/nsf-agent-v2.5.6-1daf42fe-20190916-162559.jar" -O nsf-agent.jar
-ADD nsf.yml /opt/nsf/nsf.yml
+RUN mkdir -p /opt/nsf && \
+    wget -q http://console-cust145.qingzhou.netease.com/download/nsf/nsf-boot.jar -O /opt/nsf/nsf-agent.jar
+	
+ADD nsf-demo-stock-provider/nsf.yml /opt/nsf/nsf.yml
 
 #add apm agent jar and config file
-RUN mkdir -p /opt/apm && cd /opt/apm && \
-    wget "http://console.v190808.163skiff.com/download/napm-java-agent-v5.3.3-190825-36860798.tar.gz" -O napm-java-agent.tar.gz && \
-    tar zxvf napm-java-agent.tar.gz && \
-    cd ./napm-java-agent/conf && \
-    echo "endpoint=http://apm-collector.v190808.163skiff.com" >> napm-agent.properties && \
-    echo "productId=122-stock" >> napm-agent.properties && \
-    echo "service=stock-provider" >> napm-agent.properties
+RUN mkdir -p /opt/apm && \
+    cd /opt/apm/ && \
+    wget -q http://console-cust145.qingzhou.netease.com/download/napm/skywalking-napm-bin-8.5.0-latest.tar.gz -O skywalking-napm-bin-8.5.0-latest.tar.gz && \
+    tar zxvf skywalking-napm-bin-8.5.0-latest.tar.gz && \
+    cd ./skywalking-napm-bin-8.5.0-latest/agent/config && \
+    # productId用于表示APM中唯一的应用，名称不可修改
+    echo 'agent.authentication=NTczLWR3ZGVtbw==' > agent.config && \
+    # service 为APM中监控服务的名称
+    echo 'agent.service_name=dw-nsf-http-stock-provider' >> agent.config && \
+    # 注册服务和数据上传地址
+    echo 'collector.backend_service=apm-otel-collector.service.163.org:11800' >> agent.config && \
+    # 3秒内采集trace上限，默认10000条 （-1代表全部采集）
+    echo 'agent.sample_n_per_3_secs=10000' >> agent.config
 
 #add run command
-ADD run.sh  /opt/nsf/
+ADD nsf-demo-stock-provider/run.sh  /opt/nsf/
 RUN chmod a+x /opt/nsf/run.sh
 
 CMD ["/opt/nsf/run.sh"]
