--- a/nsf-demo-stock-provider/nsf.yml
+++ b/nsf-demo-stock-provider/nsf.yml
@@ -19,7 +19,7 @@ nsf:
   manager:
     patterns:
       -
-        className: 'com.netease.cloud.nsf.demo.stock.viewer.web.service.impl.*'
+        className: 'com.netease.cloud.nsf.demo.stock.provider.web.service.impl.*'
   # 应用监控
   metric:
     enable: true
