--- a/nsf-demo-stock-provider/nsf.yml
+++ b/nsf-demo-stock-provider/nsf.yml
@@ -20,7 +20,8 @@ nsf:
     secretKey: 10253ba5221a4abaa5927c078cd5eaab
   manager:
     patterns:
-      - className: 'com.netease.cloud.nsf.demo.stock.provider.web.service.impl.*'
+      - 
+        className: 'com.netease.cloud.nsf.demo.stock.provider.web.service.impl.*'
         
   # 应用监控
   metric:
