--- a/nsf-demo-stock-provider/Dockerfile
+++ b/nsf-demo-stock-provider/Dockerfile
@@ -5,7 +5,7 @@ ADD nsf-demo-stock-provider/target/*.jar /opt/nsf/
 
 #add nsf agent jar and config file
 RUN mkdir -p /opt/nsf && \
-    wget -q http://console-cust145.qingzhou.netease.com/download/nsf/nsf-boot.jar -O /opt/nsf/nsf-agent.jar
+    wget -q http://console.rhzz.poc.com/download/nsf/nsf-boot.jar -O /opt/nsf/nsf-agent.jar
 	
 ADD nsf-demo-stock-provider/nsf.yml /opt/nsf/nsf.yml
 
