--- a/nsf-demo-stock-provider/nsf.yml
+++ b/nsf-demo-stock-provider/nsf.yml
@@ -10,18 +10,15 @@ nsf:
     mark: binhai
     zone: tianjin
     group: default
-    tags:
-      - key: protocol
-        value: http
-      - key: version
-        value: v1
+    tags: []
 
   authority:
     accessKey: 3edf7f7d70434b1b9520b54693132591
     secretKey: 6e2b23bbdac0412aa924b598d88d2ffe
   manager:
     patterns: 
-      - className: 'com.netease.cloud.nsf.demo.stock.provider.web.service.impl.*'
+      - 
+        className: 'com.netease.cloud.nsf.demo.stock.provider.web.service.impl.*'
         
   # 应用监控
   metric:
