--- a/nsf-demo-stock-viewer/nsf.yml
+++ b/nsf-demo-stock-viewer/nsf.yml
@@ -17,7 +17,7 @@ nsf:
   manager:
     patterns:
       -
-        className: 'com.netease.cloud.nsf.demo.stock.viewer.web.service.impl.*'
+        className: com.netease.cloud.nsf.demo.stock.viewer.web
   # 应用监控
   metric:
     enable: true
