--- a/nsf-demo-stock-provider/nsf.yml
+++ b/nsf-demo-stock-provider/nsf.yml
@@ -18,7 +18,7 @@ nsf:
   manager:
     patterns: 
       - 
-        className: 'com.netease.cloud.nsf.demo.stock.provider.web.service.impl.*'
+        className: com.netease.cloud.nsf.demo.stock.provider.web
         
   # 应用监控
   metric:
