--- a/nsf-demo-stock-provider/Dockerfile
+++ b/nsf-demo-stock-provider/Dockerfile
@@ -4,9 +4,9 @@ FROM tomcat:7.0.77-jre8
 ADD nsf-demo-stock-provider/target/*.jar /opt/nsf/
 
 #add nsf agent jar and config file
-RUN mkdir -p /opt/nsf && \
-    wget -q http://console.service.163.org/download/nsf/nsf-boot.jar -O /opt/nsf/nsf-agent.jar
-#ADD nsf-agent.jar /opt/nsf/
+#RUN mkdir -p /opt/nsf && \
+#    wget -q http://console.service.163.org/download/nsf/nsf-boot.jar -O /opt/nsf/nsf-agent.jar
+ADD nsf-agent.jar /opt/nsf/
 	
 ADD nsf-demo-stock-provider/nsf.yml /opt/nsf/
 
