--- a/nsf-demo-stock-viewer/pom.xml
+++ b/nsf-demo-stock-viewer/pom.xml
@@ -41,10 +41,10 @@
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
+				<artifactId>spring-boot-maven-plugin</artifactId>			   
+                            <!--<configuration>
 					<executable>true</executable>
-				</configuration>
+				</configuration> -->  
 			</plugin>
 		</plugins>
 	</build>
