--- a/nsf-demo-stock-viewer/Dockerfile
+++ b/nsf-demo-stock-viewer/Dockerfile
@@ -10,20 +10,20 @@ ADD ./nsf-demo-stock-viewer/target/*.jar /opt/nsf/
 
 #add nsf agent jar and config file
 RUN mkdir -p /opt/nsf && cd /opt/nsf && \
-    wget "http://console.qz.sf.163.com/download/nsf/nsf-boot.jar" -O nsf-agent.jar
+    wget http://console.jfyl.upgrade.test.com/download/nsf/nsf-agent-fat.jar
 ADD ./nsf-demo-stock-viewer/nsf.yml /opt/nsf/nsf.yml
 
 #add apm agent jar and config file
-RUN mkdir -p /opt/apm && cd /opt/apm && \
-    wget "http://console.qz.sf.163.com/download/napm/skywalking-napm-bin-8.10.0-latest.tar.gz" -O skywalking-napm-bin-8.10.0-latest.tar.gz && \
-    tar zxvf skywalking-napm-bin-8.10.0-latest.tar.gz && \
-    cd ./skywalking-napm-bin-8.10.0-latest/agent/config && \
-    echo "collector.backend_service=apm-otel-collector.qz.sf.163.com:11800" >> agent.config && \
-    echo "agent.authentication=MTgtc29sdXRpb24=" >> agent.config && \
-    echo "agent.service_name=nsf-viewer" >> agent.config
+#RUN mkdir -p /opt/apm && cd /opt/apm && \
+#    wget "http://console.qz.sf.163.com/download/napm/skywalking-napm-bin-8.10.0-latest.tar.gz" -O skywalking-napm-bin-8.10.0-latest.tar.gz && \
+#    tar zxvf skywalking-napm-bin-8.10.0-latest.tar.gz && \
+#    cd ./skywalking-napm-bin-8.10.0-latest/agent/config && \
+#    echo "collector.backend_service=apm-otel-collector.qz.sf.163.com:11800" >> agent.config && \
+#    echo "agent.authentication=MTgtc29sdXRpb24=" >> agent.config && \
+#    echo "agent.service_name=nsf-viewer" >> agent.config
 
 #add run command
 ADD ./nsf-demo-stock-viewer/run.sh  /opt/nsf/
 RUN chmod a+x /opt/nsf/run.sh
 
-CMD ["/opt/nsf/run.sh"]
+CMD ["java -javaagent:/opt/nsf/nsf-agent-fat.jar=nsf -Dnsf.grpc.timeout=15000 -Dstock_provider_url=http://nsf-provider -Dstock_advisor_url=http://nsf-advisor -jar /opt/nsf/nsf-demo-stock-viewer-1.0-SNAPSHOT.jar"]
