--- a/nsf-demo-stock-provider/Dockerfile
+++ b/nsf-demo-stock-provider/Dockerfile
@@ -1,4 +1,6 @@
-FROM openjdk:8
+ARG BASE_IMAGE=artifactory.jfyl.upgrade.test.com/library/nginx:1.22.1
+
+FROM ${BASE_IMAGE}
 
 ENV TZ=Asia/Shanghai LANG=C.UTF-8 LANGUAGE=C.UTF-8 LC_ALL=C.UTF-8
 
@@ -8,21 +10,22 @@ ADD ./nsf-demo-stock-provider/target/*.jar /opt/nsf/
 
 #add nsf agent jar and config file
 RUN mkdir -p /opt/nsf && cd /opt/nsf && \
-    wget "http://console.qz.sf.163.com/download/nsf/nsf-boot.jar" -O nsf-agent.jar
+    curl -O http://console.jfyl.upgrade.test.com/download/nsf/nsf-agent-fat.jar
+
 ADD ./nsf-demo-stock-provider/nsf.yml /opt/nsf/nsf.yml
 
 #add apm agent jar and config file
-RUN mkdir -p /opt/apm && cd /opt/apm && \
-    wget "http://console.qz.sf.163.com/download/napm/skywalking-napm-bin-8.10.0-latest.tar.gz" -O skywalking-napm-bin-8.10.0-latest.tar.gz && \
-    tar zxvf skywalking-napm-bin-8.10.0-latest.tar.gz && \
-    cd ./skywalking-napm-bin-8.10.0-latest/agent/config && \
-    echo "collector.backend_service=apm-otel-collector.qz.sf.163.com:11800" >> agent.config && \
-    echo "agent.authentication=MTgtc29sdXRpb24=" >> agent.config && \
-    echo "agent.service_name=nsf-provider" >> agent.config
+# RUN mkdir -p /opt/apm && cd /opt/apm && \
+#     wget "http://console.qz.sf.163.com/download/napm/skywalking-napm-bin-8.10.0-latest.tar.gz" -O skywalking-napm-bin-8.10.0-latest.tar.gz && \
+#     tar zxvf skywalking-napm-bin-8.10.0-latest.tar.gz && \
+#     cd ./skywalking-napm-bin-8.10.0-latest/agent/config && \
+#     echo "collector.backend_service=apm-otel-collector.qz.sf.163.com:11800" >> agent.config && \
+#     echo "agent.authentication=MTgtc29sdXRpb24=" >> agent.config && \
+#     echo "agent.service_name=nsf-provider" >> agent.config
 
 
 #add run command
 ADD ./nsf-demo-stock-provider/run.sh  /opt/nsf/
 RUN chmod a+x /opt/nsf/run.sh
 
-CMD ["/opt/nsf/run.sh"]
+CMD ["java -javaagent:/opt/nsf/nsf-agent-fat.jar=nsf -Dnsf.grpc.timeout=15000  -jar /opt/nsf/nsf-demo-stock-provider-1.0-SNAPSHOT.jar"]
