--- a/nsf-demo-stock-advisor/Dockerfile
+++ b/nsf-demo-stock-advisor/Dockerfile
@@ -27,4 +27,4 @@ ADD ./nsf-demo-stock-advisor/nsf.yml /opt/nsf/nsf.yml
 ADD ./nsf-demo-stock-advisor/run.sh  /opt/nsf/
 RUN chmod a+x /opt/nsf/run.sh
 
-CMD ["java -javaagent:/opt/nsf/nsf-agent-fat.jar=nsf -Dnsf.grpc.timeout=15000 -Dstock_provider_url=http://nsf-provider -Dstock_viewer_url=http://nsf-viewer -jar /opt/nsf/nsf-demo-stock-advisor-1.0-SNAPSHOT.jar"]
+CMD ["/opt/nsf/run.sh"]
