--- a/nsf-demo-stock-viewer/Dockerfile
+++ b/nsf-demo-stock-viewer/Dockerfile
@@ -25,11 +25,11 @@ ADD ./nsf-demo-stock-viewer/nsf.yml /opt/nsf/nsf.yml
 #    echo "agent.authentication=MTgtc29sdXRpb24=" >> agent.config && \
 #    echo "agent.service_name=nsf-viewer" >> agent.config
 
-ENV JAVA_OPTS="-javaagent:/opt/nsf/nsf-agent-fat.jar=nsf -Dnsf.config.debug=true -Dnsf.log.level=DEBUG -Dnsf.grpc.timeout=15000 -Dstock_provider_url=http://nsf-provider -Dstock_advisor_url=http://nsf-advisor"
+ENV JAVA_OPTS="-javaagent:/opt/nsf/nsf-agent-fat.jar=nsf -Dstock_provider_url=http://nsf-provider -Dstock_advisor_url=http://nsf-advisor"
 #add run command
 ADD ./nsf-demo-stock-viewer/run.sh  /opt/nsf/
 RUN chmod a+x /opt/nsf/run.sh
 
 # CMD ["/opt/nsf/run.sh"]
 
-CMD ["java",'$JAVA_OPTS',"-jar","/opt/nsf/nsf-demo-stock-viewer-1.0-SNAPSHOT.jar"]
+CMD ["java",$JAVA_OPTS,"-jar","/opt/nsf/nsf-demo-stock-viewer-1.0-SNAPSHOT.jar"]
