--- a/nsf-demo-stock-provider/Dockerfile
+++ b/nsf-demo-stock-provider/Dockerfile
@@ -1,18 +1,19 @@
-ARG BASE_IMAGE=artifactory.jfyl.upgrade.test.com/library/nginx:1.22.1
+ARG BASE_IMAGE=artifactory.jfyl.upgrade.test.com/library/cicd-mvn3.5-jdk8:v2.1.1
 
 FROM ${BASE_IMAGE}
 
 ENV TZ=Asia/Shanghai LANG=C.UTF-8 LANGUAGE=C.UTF-8 LC_ALL=C.UTF-8
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-#add application jar
-ADD ./nsf-demo-stock-provider/target/*.jar /opt/nsf/
+
 
 #add nsf agent jar and config file
 RUN mkdir -p /opt/nsf && cd /opt/nsf && \
     curl -O http://console.jfyl.upgrade.test.com/download/nsf/nsf-agent-fat.jar
 
 ADD ./nsf-demo-stock-provider/nsf.yml /opt/nsf/nsf.yml
+#add application jar
+ADD ./nsf-demo-stock-provider/target/*.jar /opt/nsf/
 
 #add apm agent jar and config file
 # RUN mkdir -p /opt/apm && cd /opt/apm && \
@@ -24,8 +25,6 @@ ADD ./nsf-demo-stock-provider/nsf.yml /opt/nsf/nsf.yml
 #     echo "agent.service_name=nsf-provider" >> agent.config
 
 
-#add run command
-ADD ./nsf-demo-stock-provider/run.sh  /opt/nsf/
-RUN chmod a+x /opt/nsf/run.sh
+ENV JAVA_OPTS='-javaagent:/opt/nsf/nsf-agent-fat.jar=nsf'
 
-CMD ["/opt/nsf/run.sh"]
+CMD java $JAVA_OPTS -jar /opt/nsf/nsf-demo-stock-provider-1.0-SNAPSHOT.jar
