--- a/nsf-demo-stock-viewer/Dockerfile
+++ b/nsf-demo-stock-viewer/Dockerfile
@@ -12,7 +12,7 @@ ADD ./nsf-demo-stock-viewer/target/*.jar /opt/nsf/
 
 #add apm agent jar and config file
 RUN mkdir -p /opt/apm && cd /opt/apm && \
-   curl -O skywalking-napm-bin-8.10.0-latest.tar.gz http://console.jfyl.upgrade.test.com/download/napm/skywalking-napm-bin-8.10.0-latest.tar.gz && \
+   curl -o skywalking-napm-bin-8.10.0-latest.tar.gz http://console.jfyl.upgrade.test.com/download/napm/skywalking-napm-bin-8.10.0-latest.tar.gz && \
    tar zxvf skywalking-napm-bin-8.10.0-latest.tar.gz && \
    cd ./skywalking-napm-bin-8.10.0-latest/agent/config && \
    echo "collector.backend_service=apm-otel-collector.jfyl.upgrade.test.com:11800" >> agent.config && \
