--- a/nsf-demo-stock-viewer/nsf.yml
+++ b/nsf-demo-stock-viewer/nsf.yml
@@ -5,7 +5,7 @@ nsf:
     name: nsf-viewer-shoudong
     version: 0.0.1
     projectCode: project1
-    envCode: prod
+    projectEnv: prod
     mark: ""
     tags: []
   manager:
