--- a/nsf-demo-stock-provider/Dockerfile-nsf-shoudong
+++ b/nsf-demo-stock-provider/Dockerfile-nsf-shoudong
@@ -6,9 +6,15 @@ ENV TZ=Asia/Shanghai LANG=C.UTF-8 LANGUAGE=C.UTF-8 LC_ALL=C.UTF-8
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
+
+#add nsf agent jar and config file
+RUN mkdir -p /opt/nsf && cd /opt/nsf && \
+    curl -O http://console.jfyl.upgrade.test.com/download/nsf/nsf-agent-fat.jar
+
+ADD ./nsf-demo-stock-provider/nsf.yml /opt/nsf/nsf.yml
 #add application jar
 ADD ./nsf-demo-stock-provider/target/*.jar /opt/nsf/
 
-ENV JAVA_OPTS=''
+ENV JAVA_OPTS='-javaagent:/opt/nsf/nsf-agent-fat.jar=nsf'
 
 CMD java $JAVA_OPTS -jar /opt/nsf/nsf-demo-stock-provider-1.0-SNAPSHOT.jar
