--- a/nsf-demo-stock-advisor/Dockerfile-apm-shouodong
+++ b/nsf-demo-stock-advisor/Dockerfile-apm-shouodong
@@ -6,18 +6,19 @@ ENV TZ=Asia/Shanghai LANG=C.UTF-8 LANGUAGE=C.UTF-8 LC_ALL=C.UTF-8
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-#add application jar
+# add application jar
 ADD ./nsf-demo-stock-advisor/target/*.jar /opt/nsf/
 
-add apm agent jar and config file
+# add apm agent jar and config file
 RUN mkdir -p /opt/apm && cd /opt/apm && \
    curl -o skywalking-napm-bin-8.10.0-latest.tar.gz http://console.jfyl.upgrade.test.com/download/napm/skywalking-napm-bin-8.10.0-latest.tar.gz && \
    tar zxvf skywalking-napm-bin-8.10.0-latest.tar.gz && \
    cd ./skywalking-napm-bin-8.10.0-latest/agent/config && \
-   echo "collector.backend_service=apm-otel-collector.jfyl.upgrade.test.com:11800" >> agent.config && \
-   echo "agent.authentication=My1kZW1v" >> agent.config && \
-   echo "agent.service_name=nsf-advisor-apm" >> agent.config && \
+   echo "agent.authentication=${SW_AGENT_AUTHENTICATION:My1kZW1v}" >> agent.config && \
+   echo "agent.service_name=${SW_AGENT_AUTHENTICATION:nsf-stock-apm}" >> agent.config && \
+   echo "collector.backend_service=${SW_AGENT_COLLECTOR_BACKEND_SERVICES:apm-otel-collector.jfyl.upgrade.test.com:11800}" >> agent.config && \
    echo "agent.sample_n_per_3_secs=10000" >> agent.config
+   
 
 ENV JAVA_OPTS=''
 
