--- a/nsf-demo-stock-provider/Dockerfile-nsf-shoudong
+++ b/nsf-demo-stock-provider/Dockerfile-nsf-shoudong
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=artifactory.jfyl.upgrade.test.com/library/cicd-mvn3.5-jdk8:v2.1.1
+ARG BASE_IMAGE=ahaarbor.cloud.netease.com/qztest/cicd-mvn3.5-jdk8:v2.1.1
 
 FROM ${BASE_IMAGE}
 
